ChromeOS OOBE: Add ARIA-labels for OOBE screens.

BUG=682145
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2681923005
Cr-Commit-Position: refs/heads/master@{#449162}

Former-commit-id: 824235e7763820cb2a81c1d09573a0aa335d4ff8