chrome/browser/resources/chromeos/login/oobe_a11y_option.js
@@ -19,5 +19,10 @@ Polymer({
     chromeMessage: {
       type: String,
     },
+
+    /**
+     * ARIA-label for the button.
+     */
+    ariaLabel: String,
   },
 });
