chrome/browser/resources/chromeos/login/oobe_welcome_dialog.js
@@ -35,5 +35,15 @@ Polymer({
 
   onNextClicked_: function() {
     this.fire('next-button-clicked');
-  }
+  },
+
+  /**
+    * This function formats message for labels.
+    * @param String label i18n string ID.
+    * @param String parameter i18n string parameter.
+    * @private
+    */
+  formatMessage_: function(label, parameter) {
+    return loadTimeData.getStringF(label, parameter);
+  },
 });
